# amqcsldb-py

./: .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.rst  pyproject.toml
.github/workflows/: ci.yml
docs/source/: changelog.rst  conf.py  index.rst  installation.rst  intro.rst  quickstart.rst
docs/source/advanced/: async.rst  cli.rst
docs/source/reference/: api.rst  client.rst  errors.rst  objects.rst  utils.rst
docs/source/reference/workflows/: character.rst  index.rst
docs/source/workflows/: character.rst
examples/: .env.template  .gitignore  async.py  hk_metadata.py  idoly_pride_metadata.py  milk.py  sunshine_metadata.py  superstar_metadata.py  terraria_metadata.py  verify_sunshine.py
examples/log/: __init__.py
examples/templates/: char_meta_template.py
src/amqcsl/: __init__.py  __main__.py  _client.py  _client_consts.py  cli.py  client.py  client_utils.py  exceptions.py  utils.py
src/amqcsl/_templates/log/: log_config.json
src/amqcsl/_templates/scripts/: async.py.txt  character.py.txt  character_compact.py.txt  simple.py.txt
src/amqcsl/clients/: _async_client.py  _client_consts.py  _sync_client.py  async_client.py  sync_client.py
src/amqcsl/clients/bundles/: __init__.py  _misc.py  _pages.py  core.py  misc.py  pages.py
src/amqcsl/objects/: __init__.py  _db_types.py  _json_types.py  _obj_consts.py  editables.py  obj_utils.py  objects.py
src/amqcsl/templates/log/: formatter.py
src/amqcsl/templates/scripts/: char_meta.txt  character.py.txt  character.txt  character_compact.py.txt  simple.py.txt  simple.txt
src/amqcsl/workflows/: __init__.py  _workflow_utils.py  character.py
tests/: conftest.py  helpers.py  test_api.py  test_async_api.py  test_login.py
tests/resources/: groups.json  lists.json
tests/resources/errors/: no_meta.json
tests/resources/idolypride/: artists.json  songs.json  tracks.json
tests/resources/idolypride/songs/: blueskysummer.json
tests/resources/sunshine/: artists.json  tracks.json
tests/resources/sunshine/artists/: shukasaitou.json
tests/resources/sunshine/metadata/: sukiforyou.json
tests/resources/superstar/: artists.json  aspire.json  liella.json
tests/workflows/: test_character.py
